# advanced-rag-talks

./: .env.template  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
talks/: parent-document-retriever.ipynb
